# keen-emu-splitux

./: .gitignore  Cargo.toml
re/: keenonline-decompiled.txt  knfread.py  knfschema.py  patch.py  patch2.py  patch3.py  patch4.py  patch5.py  readring.py  schema-LoginResponse.txt
re/scripts/: ensh-2inst-keen.sh  ensh-2inst.sh  ensh-gs.sh  ensh-keen.sh  ensh-together.sh  rawwine.sh
src/: main.rs
